--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ header ul li a:hover, footer ul li a:hover{
     width: 90%;
     height: 100%;
     border: 1px solid white;
-    color: gray;
+    background-color: gray;
     font-family: 'Cambria Math', serif;
     color:  #169FE3;
 }
